<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="fill_vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.istmszone.andoird.NotificationActivity" >

    <TextView
        android:id="@+id/date"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_below="@+id/eventName"
        android:layout_marginTop="10dp"
        android:text="@string/setDate"
        android:onClick="showDatePicker"
        android:clickable="true"
        android:textSize="20sp" />

    <Button
        android:id="@+id/sendInvite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/friend"
        android:text="@string/sendInvite" />

    <Button
        android:id="@+id/addFriend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/friend"
        android:text="@string/addFriend" />

    <ListView
        android:id="@+id/invitationList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/sendInvite"
 >

    </ListView>

    <TextView
        android:id="@+id/time"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_alignBaseline="@+id/date"
        android:layout_alignBottom="@+id/date"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:clickable="true"
        android:onClick="showTimePicker"
        android:text="@string/setTime"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/friend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/date"
        android:layout_alignLeft="@+id/date"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/date"
        android:ems="10"
        android:hint="@string/friend"
        android:inputType="text"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/eventName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
		android:layout_alignStart="@+id/eventName"
		android:layout_alignLeft="@+id/eventName"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:hint="@string/eventName"
        android:inputType="text" />

</RelativeLayout>